<!-- Refenerence to strings that can be used within the code-->
<resources>

    <string name="app_name">MusiQMobile</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_password_required">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short, enter at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to register -->
    <string name="register">Register</string>
    <string name="prompt_password_confirm">Re-type Password</string>
    <string name="auth_failed">\"Authentication failed, please check your email and password\"</string>

    <!-- Title strings -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="title_activity_playlist">Playlists</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_parties">Parties</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to Parties -->
    <string name="sub_nearby_parties">Parties Near You</string>
    <string name="sub_recent_parties">Recently Joined Parties</string>

    <!-- Strings related to CreateParty -->

    <string name="title_create_party">Create Party</string>
    <string name="admin_only_option_radio_btn">Admin Only</string>
    <string name="admin_and_member_radio_btn">Admin and Members</string>
    <string name="suggestion_only_radio_btn">Member Suggestion Only</string>

</resources>
