<?xml version="1.0" encoding="utf-8"?>
<!-- Screen users see when trying to login -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/content_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorBlack"
android:orientation="vertical"
tools:context="com.fantasticapps.musiqproto.LoginActivity">

    <!-- All component organized vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <!-- Title of screen: "Login" -->
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="48dp"
            android:textStyle="bold" />

        <!-- Text field to enter email of the user -->
        <EditText
            android:id="@+id/loginEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="true"
            android:editable="true"
            android:ems="10"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="24dp"
            android:layout_gravity="center"/>

        <!-- Text field to enter password of the user -->
        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="true"
            android:editable="true"
            android:ems="10"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_password_required"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="24dp" />

        <!-- Button used to switch to Dashboard screen -->
        <Button
            android:id="@+id/buttonConfirmLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="false"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />

        <!-- Button to sign in with Google -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_weight="0.08"
            android:elevation="24dp" />

    </LinearLayout>

    <!-- Includes navigation bar on the botton of the screen -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/navigation_reg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/activity_main_nav"/>

    </RelativeLayout>

</LinearLayout>
