<?xml version="1.0" encoding="utf-8"?>
<!-- View when user what to create a party -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_party"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="com.fantasticapps.musiqproto.CreatePartyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Title of Screen: Create Party -->
        <TextView
            android:id="@+id/createPartyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_create_party"
            android:textStyle="bold"
            android:textSize="44dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_margin"
            android:textAlignment="center" />

        <!-- Text input field for party name -->
        <EditText
            android:id="@+id/partyNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="true"
            android:editable="true"
            android:ems="10"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:hint="Enter party name"/>

        <!-- Three options on requesting songs -->
        <RadioGroup
            android:id="@+id/partyOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <!-- Option 1: Only Admins songs played -->
            <RadioButton
                android:id="@+id/adminOnlyRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/admin_only_option_radio_btn"
                android:textSize="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"/>

            <!-- Option 2: Anyone can add a song -->
            <RadioButton
                android:id="@+id/adminAndMembersRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/admin_and_member_radio_btn"/>

            <!-- Option 3: Only Admin can add a song,
                but anyone can suggest a song -->
            <RadioButton
                android:id="@+id/suggestionOnlyRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/suggestion_only_radio_btn"/>

        </RadioGroup>

        <!-- Button used to create the party after filling the two fields -->
        <Button
            android:id="@+id/createPartyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="false"
            android:enabled="true"
            android:textSize="20dp"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:text="Create Party" />


    </LinearLayout>

</LinearLayout>

    <!-- OLD NAVIGATION CODE -->
    <!--
      <android.support.design.widget.BottomNavigationView
          android:id="@+id/navigation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:background="?android:attr/windowBackground"
          app:menu="@menu/navigation"
          />
          -->